Impoved UI , added Coupons , Improved admin controls , Added ratings features , users can save cards-for further transactions

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,9 +1,8 @@
-#footer {
-  position: relative;
-  height: 20vw;
-}
-
 #aboutUs {
   width: 100%;
   min-height: 10%;
+}
+
+#main {
+  min-height: 700px;
 }
